--- a/EXO1/style.css
+++ b/EXO1/style.css
@@ -43,7 +43,7 @@ body {
 
 /* ------------------------ */
 .card {
-    height: 50vh;
+    height: 60vh;
     width: 40%;
     background-color: #27566B;
     padding: 10px;
@@ -87,8 +87,20 @@ img {
     font-weight: 900;
     font-size: 1.8rem;
     cursor: pointer;
+    position: relative;
 }
 
+.plus::after{
+    content: "voulez-vous ajouter un autre user";
+    position: absolute;
+    top: -200%;
+    background-color: #06293D;
+    display: none;
+    width: 200px;
+}
+.plus:hover.plus::after{
+    display: flex;
+}
 .form {
     position: absolute;
     padding: 10px;
@@ -183,10 +195,11 @@ td {
     overflow: scroll;
 }
 
-.suggestion{
+.suggestion {
     position: absolute;
     z-index: 10;
     background-color: red;
+    left: 10%;
 }
 
 #RCHE {
@@ -206,7 +219,7 @@ td {
     cursor: pointer;
 }
 
-.beut{
+.beut {
     cursor: pointer;
 }
 
@@ -251,8 +264,81 @@ td {
     justify-content: space-between;
     font-size: 2em;
 } */
-.btn1:hover,.btn2:hover{
+.btn1:hover,
+.btn2:hover {
     color: white;
     background-color: aqua;
     border-radius: 5px;
+}
+.mofifier{
+    cursor: pointer;
+    position: relative;
+    font-weight: 900;
+    font-size: 1.5rem;
+}
+.MODIFIER{
+    position: absolute;
+    display: flex;
+    width: 300px;
+    background-color: rgba(0, 122, 128, 0.543);
+    top: 25%;
+    left: 40%;
+    z-index: 12;
+    display: none;
+}
+.MODIFIER1{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.MODIFIER11{
+    width: 100%;
+}
+.nn,.pn,.en,.tn,.in{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.BTNS{
+    display: flex;
+    justify-content: space-around;
+}
+.poubelle{
+    cursor: pointer;
+}
+.btn11:hover,
+.btn22:hover{
+    background-color: goldenrod;
+    color: white;
+}
+.supprimer{
+    cursor: pointer;
+    position: relative;
+    font-weight: 900;
+    font-size: 1.5rem;
+}
+.supprimer::after{
+    content: "voulez-vous supprimer";
+    position: absolute;
+    top: -200%;
+    background-color: #06293D;
+    display: none;
+    width: 200px;
+}
+.supprimer:hover.supprimer::after{
+    display: flex;
+}
+.mofifier::after{
+    content: "voulez-vous modifier";
+    position: absolute;
+    top: -200%;
+    background-color: #06293D;
+    display: none;
+    width: 200px;
+}
+.mofifier:hover.mofifier::after{
+    display: flex;
 }
